--- a/To_Do_List/To_Do_List/Base.lproj/Main.storyboard
+++ b/To_Do_List/To_Do_List/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
         <!--To-Do-List-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ToDoController" id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -99,15 +99,15 @@
             </objects>
             <point key="canvasLocation" x="194" y="34"/>
         </scene>
-        <!--Task-->
+        <!--taskCreationViewController-->
         <scene sceneID="VT2-Ri-hKw">
             <objects>
-                <viewController id="LhL-eG-Htp" customClass="TaskCreationViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="taskCreationViewController" title="taskCreationViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="LhL-eG-Htp" customClass="TaskCreationViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cu7-Z3-Nw1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Task Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8ao-gJ-04y">
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Task Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8ao-gJ-04y">
                                 <rect key="frame" x="16" y="165" width="343" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
@@ -137,6 +137,9 @@
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <accessibility key="accessibilityConfiguration">
+                            <accessibilityTraits key="traits" keyboardKey="YES"/>
+                        </accessibility>
                         <viewLayoutGuide key="safeArea" id="3y6-Ol-jej"/>
                     </view>
                     <navigationItem key="navigationItem" title="Task" id="Vnh-Wz-vMo">
