--- a/To_Do_List/To_Do_List/Base.lproj/Main.storyboard
+++ b/To_Do_List/To_Do_List/Base.lproj/Main.storyboard
@@ -169,6 +169,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="GgH-Xh-Jh0"/>
+        <segue reference="6pT-1K-bUN"/>
     </inferredMetricsTieBreakers>
 </document>
